# sqlbench-runners

./: .dockerignore  .gitignore  README.md  build-docker-datafusion-python.sh  build-docker-datafusion.sh  build-docker-duckdb.sh  build-docker-images.sh  build-docker-polars.sh
archive/ballista/: README.md
archive/ballista-python/: README.md
archive/ballista/src/: main.rs
archive/dask-sql/: README.md
archive/spark/: README.md
ballista/: Cargo.toml  README.md  sqlbench-ballista.py
ballista-python/: README.md  sqlbench-ballista.py
ballista/src/: main.rs
dask-sql/: sqlbench-dask-sql.py
datafusion/: .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.sh  entrypoint.sh
datafusion-python/: Dockerfile  README.md  build-docker.sh  entrypoint.sh  requirements.txt  sqlbench-datafusion-python.py
datafusion/src/: main.rs
duckdb/: Dockerfile  README.md  build-docker.sh  entrypoint.sh  requirements.txt  sqlbench-duckdb.py
polars/: Dockerfile  README.md  build-docker.sh  entrypoint.sh  requirements.txt  sqlbench-polars.py
ray-sql/: README.md  sqlbench-ray-sql.py
scripts/: chart-df-versions.py  compare-df-versions.py
spark/: .dockerignore  .gitignore  README.md  pom.xml
spark/src/main/scala/io/sqlbenchmarks/sqlbench/: Main.scala  Qpml.scala
spark/src/main/scala/io/sqlbenchmarks/sqlbenchh/: Main.scala  Qpml.scala
