[package]
name = "sqlbench-ballista"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
publish = false

[dependencies]
ballista = { git = "https://github.com/apache/arrow-ballista", rev = "deca31f811a3fc58335d7e1170f733b396602a25" }
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "18.0.0-rc1" }
qpml = { version = "0.11.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
structopt = "0.3.26"
tokio = { version = "^1.0", features = ["rt-multi-thread"] }

[features]
default = [ ]
qpml = ["dep:qpml"]
